Prototype: JavaScript, Chord Changes
• Added javascript for one minute timer.
• Toggle chord combo overlay with “+ New Combo” and “Add” buttons

--- a/JS Samples/timer.html
+++ b/JS Samples/timer.html
@@ -11,6 +11,7 @@
 	<button id="startReset">Start</button>
 
 	<script type="text/javascript">
+var timerFunction = {
 // ------------------------------------- Start & Reset Functions
 function startTimer() {
 	sec = 59;
@@ -60,6 +61,7 @@ startReset.onclick = function(){
 			break;
 	}
 };
+
 	</script>
 </body>
 </html>
