Prototype: JavaScript, Timer Canvas
• Added animated ring around countdown timer using HTML5 canvas.

--- a/JS Samples/timer.html
+++ b/JS Samples/timer.html
@@ -14,7 +14,7 @@
 var timerFunction = {
 // ------------------------------------- Start & Reset Functions
 function startTimer() {
-	sec = 59;
+	sec = 59;													// Reset timer read-out
 	countdown = setInterval(currentTime, 1000);
 	toggle = false;
 	startReset.innerHTML = 'Reset';
