--- a/Prototype/chords.html
+++ b/Prototype/chords.html
@@ -15,13 +15,14 @@
 		</header>
 		<main id="chords">
 			<section id="timer">
-				<img src="img/timeTrack.svg" alt="Placeholder">
+				<img src="img/timeTrack.png" alt="">
 				<div id="startReset">
 					<div id="timeValue">
 						1:00
 					</div>
 					<img src="img/play.svg" alt="Start timer" id="toggleBtn">
 				</div>
+				<canvas id="ringTimer" width="174" height="174"></canvas>
 			</section>
 
 			<!-- Chord List -->
