Prototype: JavaScript, Timer Canvas
• Fixed bug with time intervals
• Arc draws full circle at 1:00 and clears at 0:00
• Cleaned up timer code and comments

--- a/Prototype/chords.html
+++ b/Prototype/chords.html
@@ -14,15 +14,15 @@
 			<div id="blank">&nbsp;</div>
 		</header>
 		<main id="chords">
-			<section id="timer">
+			<section id="timer_container">
 				<img src="img/timeTrack.png" alt="">
 				<div id="startReset">
-					<div id="timeValue">
+					<div id="n_timer">
 						1:00
 					</div>
-					<img src="img/play.svg" alt="Start timer" id="toggleBtn">
+					<img src="img/play.svg" alt="Start timer" id="toggle_btn">
 				</div>
-				<canvas id="ringTimer" width="174" height="174"></canvas>
+				<canvas id="a_timer" width="174" height="174"></canvas>
 			</section>
 
 			<!-- Chord List -->
