Prototype: JavaScript, Song List
• Swap song details on list item click. Includes 2 chord sections and
strum pattern.
• Cleaned up ID names in html & css

--- a/Prototype/chords.html
+++ b/Prototype/chords.html
@@ -13,7 +13,7 @@
 			<a href="index.html" id="back" title="back"><img src="img/back.svg" alt="Back to features list"></a>
 			<div id="blank">&nbsp;</div>
 		</header>
-		<main id="chords">
+		<main id="chordChg">
 			<section id="timer_container">
 				<img src="img/timeTrack.png" alt="">
 				<div id="startReset">
