--- a/Prototype/songs.html
+++ b/Prototype/songs.html
@@ -17,111 +17,26 @@
 		</header>
 		<main>
 <!--																		Song List -->
-			<section id="song">
-				<ul id="songList">
-
+			<section id="songList_container">
+				<ul id="songList_ul">
 				</ul>
 			</section>
 
 <!--																		Song Details -->
-			<article id="songDetails">
-				<section id="chords">
-					<section class="chordSection" id = "s_1_container">
+			<article id="song_container">
+				<section id="chords_container">
+					<section class="chordSection" id="cs_1">
 						<h4>Verse</h4>
-						<div class="barContainer" id = "s_1">
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>E<sub>&nbsp;</sub></li>
-							</ul>
+						<div class="bars">
 						</div>
 					</section>
-					<section class="chordSection" id = "s_2_container">
+					<section class="chordSection" id="cs_2">
 						<h4>Chorus</h4>
-						<div class="barContainer" id = "s_2">
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>F<sub>&nbsp;</sub></li>
-								<li>F<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>m</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>E<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-							</ul>
-							<ul>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>D<sub>&nbsp;</sub></li>
-								<li>A<sub>&nbsp;</sub></li>
-								<li>&nbsp;<sub>&nbsp;</sub></li>
-							</ul>
+						<div class="bars">
 						</div>
 					</section>
 				</section>
-				<section id="s_strum_container">
+				<section id="strum_container">
 					<h4>Strum Pattern</h4>
 					<ul id="s_strum">
 						<li>
@@ -185,5 +100,6 @@
 			</article>
 		</main>
 		<script src="js/song_json.js" charset="utf-8"></script>
+		<script src="js/scripts.js" charset="utf-8"></script>
 	</body>
 </html>
