--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body>
+    <body class="bg_guitar">
 
         <header>
             <h1>Guitar Practice</h1>
