--- a/WebApp/landing.html
+++ b/WebApp/landing.html
@@ -5,10 +5,10 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body>
+    <body  class="bg_guitar">
 
         <header>
-            <h2>Guitar Practice</h2>
+            <h1>Guitar Practice</h1>
         </header>
 
         <nav>
