Mobile Web App R1
• Completed mobile web app HTML

--- a/WebApp/exercises.html
+++ b/WebApp/exercises.html
@@ -17,7 +17,7 @@
 
         <section id="chordList">
             <nav>
-                <h4>Sort By <span id="sortType">Record</span>, <span id="sortOrder">Highest to Lowest</span></4>
+                <h4>Sort By <span id="sortType">Record</span>, <span id="sortOrder">Highest to Lowest</span></h4>
                 <div id="sortOverlay">
                     <label>Sort By</label>
                     <label><input type="radio" value="Record" checked name="sortBy">Record</label>
