--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -12,9 +12,11 @@
         </header>
 
         <section id="login">
-            <input type="text" autocomplete="username" max="30" name="Username" placeholder="Username">
-            <input type="password" autocomplete="password" max="16" name="Password" placebolder="Password">
+            <h4>Sign In</h4>
+            <input type="text" maxlength="30" name="Username" placeholder="Username">
+            <input type="password" maxlength="16" name="Password" placeholder="Password">
             <a href="landing.html">Login to Demo</a>
+            <button class="secondary">Sign Up</button>
         </section>
 
         <footer>
