--- a/WebApp/songs_new_01.html
+++ b/WebApp/songs_new_01.html
@@ -9,7 +9,7 @@
 
         <header>
             <h1>New Song</h1>
-            <h2>Step <1:>Song Details</1:></h2>
+            <h2>Step 1: Song Details</h2>
             <a href="songs.html">
                 <img src="img/back.svg" alt="Back">
             </a>
