--- a/WebApp/timer.html
+++ b/WebApp/timer.html
@@ -76,11 +76,12 @@
                             <h5>Add New Chord Combination</h5>
                         </li>
                     </ul>
+                </article>
             </article>
             <article id="drawer_charts">
                 <h4>Charts</h4>
                 <canvas id="chart" width="100%" height="100%"></canvas>
-                <section="axis">
+                <section id="axis">
                     <ul id="y">
                         <li>105</li>
                         <li>100</li>
