Mobile Web App R1
• Added basic styles in LESS
• Began work on page-specific LESS/layouts
• Added placeholder images

--- a/WebApp/exercises.html
+++ b/WebApp/exercises.html
@@ -5,11 +5,11 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_black">
+    <body class="bg_primary">
 
         <header>
             <h1>Finger Exercises</h1>
-            <h2>Which chord change are you practicing</h2>
+            <h2>Which chord change are you practicing?</h2>
             <a href="landing.html">
                 <img src="img/back.svg" alt="Back">
             </a>
@@ -27,26 +27,32 @@
                     <label><input type="radio" value="Z to A" name="sortOrder">Z to A</label>
                 </div>
             </nav>
-            <ul>
+            <ul class="list">
                 <li>
-                    <h5>A#dim7 : A#dim6</h5>
-                    <h6>105</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>A#dim7 : A#dim6</h5>
+                        <h6>105</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>D : E</h5>
-                    <h6>120</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>D : E</h5>
+                        <h6>120</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>Cm4 : D</h5>
-                    <h6>89 </h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>Cm4 : D</h5>
+                        <h6>89 </h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
             </ul>
         </section>
 
-        <aside>
+        <aside class="fab">
             <a href="exercises_new.html">
                 <img src="img/new.svg" alt="New Chord Combo">
             </a>
