--- a/WebApp/landing.html
+++ b/WebApp/landing.html
@@ -5,29 +5,41 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body  class="bg_guitar">
+    <body class="bg_primary">
 
         <header>
             <h1>Guitar Practice</h1>
         </header>
 
-        <nav>
-            <a href="exercises.html">
-                <h5>Finger Exercises</h5>
-                <h6>Track your progress</h6>
-                <img src="exercises.svg" alt="Finger Exercises">
-            </a>
-            <a href="songs.html">
-                <h5>Song List</h5>
-                <h6>Chords and strumming patterns</h6>
-                <img src="song.svg" alt="Songs">
-            </a>
-            <a href="chords.html">
-                <h5>Chord Charts</h5>
-                <h6>Learn new chords</h6>
-                <img src="chords.svg" alt="Chord Icon">
-            </a>
-        </nav>
+        <ul class="landing">
+            <li>
+                <a href="exercises.html">
+                    <div>
+                        <h5>Finger Exercises</h5>
+                        <h6>Track your progress</h6>
+                    </div>
+                    <img src="img/exercises.svg" alt="Finger Exercises">
+                </a>
+            </li>
+            <li>
+                <a href="songs.html">
+                    <div>
+                        <h5>Song List</h5>
+                        <h6>Chords and strumming patterns</h6>
+                    </div>
+                    <img src="img/song.svg" alt="Songs">
+                </a>
+            </li>
+            <li>
+                <a href="chords.html">
+                    <div>
+                        <h5>Chord Charts</h5>
+                        <h6>Learn new chords</h6>
+                    </div>
+                    <img src="img/chords.svg" alt="Chord Icon">
+                </a>
+            </li>
+        </ul>
 
         <footer>
             &copy; Maria Szubski 2016
