--- a/WebApp/songs_new_01.html
+++ b/WebApp/songs_new_01.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_orange">
+    <body class="bg_song">
 
         <header>
             <h1>New Song</h1>
