--- a/WebApp/timer.html
+++ b/WebApp/timer.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_black">
+    <body class="bg_primary">
 
         <header class="chordHeader">
             <h1>First : Second</h1>
@@ -27,21 +27,27 @@
         <section id="drawer_container">
             <article id="drawer_chords">
                 <h4>Switch to Another Chord</h4>
-                <ul>
+                <ul class="list">
                     <li class="active">
-                        <h5>A#dim7 : A#dim6</h5>
-                        <h6>105</h6>
-                        <img src="img/arrow.svg" alt="Next">
+                        <a href="exercises.html">
+                            <h5>A#dim7 : A#dim6</h5>
+                            <h6>105</h6>
+                            <img src="img/arrow.svg" alt="Next">
+                        </a>
                     </li>
                     <li>
-                        <h5>D : E</h5>
-                        <h6>120</h6>
-                        <img src="img/arrow.svg" alt="Next">
+                        <a href="exercises.html">
+                            <h5>D : E</h5>
+                            <h6>120</h6>
+                            <img src="img/arrow.svg" alt="Next">
+                        </a>
                     </li>
                     <li>
-                        <h5>Cm4 : D</h5>
-                        <h6>89 </h6>
-                        <img src="img/arrow.svg" alt="Next">
+                        <a href="exercises.html">
+                            <h5>Cm4 : D</h5>
+                            <h6>89 </h6>
+                            <img src="img/arrow.svg" alt="Next">
+                        </a>
                     </li>
                 </ul>
             </article>
