--- a/WebApp/exercises_new.html
+++ b/WebApp/exercises_new.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_orange">
+    <body class="bg_exercise">
 
         <header>
             <h1>Finger Exercises</h1>
