--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -5,18 +5,17 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_guitar">
+    <body class="bg_photo" id="login">
 
         <header>
             <h1>Guitar Practice</h1>
         </header>
 
-        <section id="login">
-            <h4>Sign In</h4>
+        <section>
             <input type="text" maxlength="30" name="Username" placeholder="Username">
             <input type="password" maxlength="16" name="Password" placeholder="Password">
-            <a href="landing.html">Login to Demo</a>
-            <button class="secondary">Sign Up</button>
+            <button href="landing.html" class="button">Login to Demo</button>
+            <a href="">Sign Up</a>
         </section>
 
         <footer>
