--- a/WebApp/songs.html
+++ b/WebApp/songs.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_black">
+    <body class="bg_primary">
 
         <header>
             <h1>Song List</h1>
@@ -15,36 +15,48 @@
         </header>
 
         <section id="songList">
-            <ul>
+            <ul class="list">
                 <li>
-                    <h5>Three Little Birds</h5>
-                    <h6>Bob Marley</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>Three Little Birds</h5>
+                        <h6>Bob Marley</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>Hound Dog</h5>
-                    <h6>Elvis</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>Hound Dog</h5>
+                        <h6>Elvis</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>Walk The Line</h5>
-                    <h6>Johnny Cash</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>Walk The Line</h5>
+                        <h6>Johnny Cash</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>More Than a Feeling</h5>
-                    <h6>Boston</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>More Than a Feeling</h5>
+                        <h6>Boston</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>Hey Ya</h5>
-                    <h6>Outcast</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>Hey Ya</h5>
+                        <h6>Outcast</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
                 <li>
-                    <h5>The Gambler</h5>
-                    <h6>Kenny Rogers</h6>
-                    <img src="img/arrow.svg" alt="Next">
+                    <a href="song_detail.html">
+                        <h5>The Gambler</h5>
+                        <h6>Kenny Rogers</h6>
+                        <img src="img/arrow.svg" alt="Next">
+                    </a>
                 </li>
             </ul>
         </section>
