--- a/WebApp/song_detail.html
+++ b/WebApp/song_detail.html
@@ -5,14 +5,14 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_primary">
+    <body class="bg_white">
 
         <header>
             <h1 id="s_title">Three Little Birds</h1>
             <h2 id="s_artist">Bob Marley</h2>
             <h3><span id="s_capo">3rd Fret</span> • <span id="s_tempo">120 BPM</span></h3>
             <a href="songs.html">
-                <img src="img/back.svg" alt="Back">
+                <img src="img/arrow.svg" alt="Back">
             </a>
             <a href="song_edit.html">
                 <img src="img/edit.svg" alt="Edit Song">
