--- a/WebApp/songs.html
+++ b/WebApp/songs.html
@@ -15,54 +15,66 @@
         </header>
 
         <section id="songList">
-            <ul class="list">
+            <ul class="songs">
                 <li>
                     <a href="song_detail.html">
-                        <h5>Three Little Birds</h5>
-                        <h6>Bob Marley</h6>
+                        <div>
+                            <h5>Three Little Birds</h5>
+                            <h6>Bob Marley</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
                     <a href="song_detail.html">
-                        <h5>Hound Dog</h5>
-                        <h6>Elvis</h6>
+                        <div>
+                            <h5>Hound Dog</h5>
+                            <h6>Elvis</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
                     <a href="song_detail.html">
-                        <h5>Walk The Line</h5>
-                        <h6>Johnny Cash</h6>
+                        <div>
+                            <h5>Walk The Line</h5>
+                            <h6>Johnny Cash</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
                     <a href="song_detail.html">
-                        <h5>More Than a Feeling</h5>
-                        <h6>Boston</h6>
+                        <div>
+                            <h5>More Than a Feeling</h5>
+                            <h6>Boston</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
                     <a href="song_detail.html">
-                        <h5>Hey Ya</h5>
-                        <h6>Outcast</h6>
+                        <div>
+                            <h5>Hey Ya</h5>
+                            <h6>Outcast</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
                     <a href="song_detail.html">
-                        <h5>The Gambler</h5>
-                        <h6>Kenny Rogers</h6>
+                        <div>
+                            <h5>The Gambler</h5>
+                            <h6>Kenny Rogers</h6>
+                        </div>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
             </ul>
         </section>
 
-        <aside>
-            <a href="songs_new_01.html">
+        <aside class="fab songs">
+            <a href="exercises_new.html">
                 <img src="img/new.svg" alt="New Chord Combo">
             </a>
         </aside>
