Mobile Web App R1
• Cleaned up LESS, IDs and classes
• Added styles for the song detail page

--- a/WebApp/exercises.html
+++ b/WebApp/exercises.html
@@ -35,7 +35,7 @@
                     </label>
                 </div>
             </nav>
-            <ul class="exercises">
+            <ul class="exercises list">
                 <li>
                     <a href="song_detail.html">
                         <h5>A#dim7 : A#dim6</h5>
