--- a/WebApp/landing.html
+++ b/WebApp/landing.html
@@ -11,7 +11,7 @@
             <h1>Guitar Practice</h1>
         </header>
 
-        <ul class="landing">
+        <ul class="landing list">
             <li>
                 <a href="exercises.html">
                     <div>
