--- a/WebApp/songs.html
+++ b/WebApp/songs.html
@@ -15,7 +15,7 @@
         </header>
 
         <section id="songList">
-            <ul class="songs">
+            <ul class="songs list">
                 <li>
                     <a href="song_detail.html">
                         <div>
