Mobile Web App R1
• Updated Song Detail layout

--- a/WebApp/exercises.html
+++ b/WebApp/exercises.html
@@ -37,21 +37,21 @@
             </nav>
             <ul class="exercises list">
                 <li>
-                    <a href="song_detail.html">
+                    <a href="timer.html">
                         <h5>A#dim7 : A#dim6</h5>
                         <h6>105</h6>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
-                    <a href="song_detail.html">
+                    <a href="timer.html">
                         <h5>D : E</h5>
                         <h6>120</h6>
                         <img src="img/arrow.svg" alt="Next">
                     </a>
                 </li>
                 <li>
-                    <a href="song_detail.html">
+                    <a href="timer.html">
                         <h5>Cm4 : D</h5>
                         <h6>89 </h6>
                         <img src="img/arrow.svg" alt="Next">
