--- a/WebApp/song_detail.html
+++ b/WebApp/song_detail.html
@@ -46,7 +46,7 @@
             </section>
             <section>
                 <h4>Strum Pattern</h4>
-                <ul>
+                <ul class="strum">
                     <li><i class="strum_down"></i><i class="strum_mute"></i></li>
                     <li><i class="strum_up"></i></li>
                     <li><i class="strum_down"></i></li>
@@ -69,7 +69,7 @@
             &copy; Maria Szubski 2016
         </footer>
 
-        <section  class="bg_blue" id="saved">
+        <section id="saved">
             <h1>Song <span id="state">Saved</span></h1>
             <img src="img/saved.svg" alt="Complete">
         </section>
