Mobile Web App R1
• Added styles for New/Edit form fields

--- a/WebApp/song_detail.html
+++ b/WebApp/song_detail.html
@@ -14,7 +14,7 @@
             <a href="songs.html" id="primary">
                 <img src="img/back_w.svg" alt="Back">
             </a>
-            <a href="song_edit.html" id="secondary">
+            <a href="songs_new_01.html" id="secondary">
                 <img src="img/edit.svg" alt="Edit Song">
             </a>
         </header>
