--- a/WebApp/songs_new_01.html
+++ b/WebApp/songs_new_01.html
@@ -32,7 +32,7 @@
             <input type="text" placeholder="Chords" value="A, D, E">
         </section>
 
-        <a href="songs_new_02.html">
+        <a href="songs_new_02.html" id="save">
             <img src="img/next.svg" alt="Save &amp; Continue">
         </a>
 
