Mobile Web App R1
• Added styles for New/Edit song
• Added styles for custom chord keyboard

--- a/WebApp/songs_new_02.html
+++ b/WebApp/songs_new_02.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="bg_song">
+    <body class="bg_song forms">
 
         <header>
             <h1>New Song</h1>
@@ -18,7 +18,7 @@
         <section id="s_chords">
             <section>
                 <h4>Verse</h4>
-                <ul>
+                <ul class="content">
                     <li>AADD</li>
                     <li>ADAA</li>
                     <li>DDDD</li>
@@ -61,8 +61,10 @@
                 <button>Minor</button>
                 <button class="active">Diminished</button>
             </div>
-            <button>Next Bar</button>
-            <button>Add Chord</button>
+            <div class="submit">
+                <button>Next Bar</button>
+                <button>Add Chord</button>
+            </div>
         </section>
 
         <a href="songs_new_03.html">
